[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
rdkafka = { version = "0.25", default-features = false }
log = "0.4.8"
clap = "2.18.0"
tokio = { version = "1.0", features = ["full"] }
confy = { version = "^0.4.0", default-features = false }
